# ncbs

./: .dockerignore  Dockerfile  Gemfile  README.md  docker-compose.yml
.github/workflows/: lint_rubocop.yml
app/assets/stylesheets/: application.css
app/controllers/: projects_controller.rb  users_controller.rb
app/models/: project.rb  user.rb
app/views/layouts/: _navbar.html.erb  application.html.erb  login.html.erb
app/views/projects/: binaries.html.erb  index.html.erb  new.html.erb  overview.html.erb  show.html.erb
app/views/users/: login.html.erb  show.html.erb
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
concept/: index.html
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
config/environments/: development.rb  production.rb
config/initializers/: assets.rb  devise.rb
db/: schema.rb
db/migrate/: 20231206122826_create_projects.rb
test/fixtures/: projects.yml
