[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = "0.4.31"
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.35.1", features = ["tokio-macros", "rt-multi-thread", "macros"] }
